# parallel-algorithms

./: .gitignore
mpi-5-palindrome/: mpi-5.sln
mpi-5-palindrome/mpi-6/: main.cpp  mpi-6.vcxproj
mpi-5-palindrome/mpi-single/: main.cpp  mpi-single.vcxproj
mpi-6-determinant/mpi-kal-6/: main.cpp  mpi-kal-6.vcxproj
mpi-6-determinant/mpi-single/: main.cpp
mpi-determinant/: mpi-determinant.sln
mpi-determinant/mpi-kal-6/: main.cpp  mpi-kal-6.vcxproj
mpi-determinant/mpi-single/: main.cpp
mpi-openmp-sparse-matrix/: mpi-openmp-sparse-matrix.sln
mpi-openmp-sparse-matrix/Release/: test.txt
mpi-openmp-sparse-matrix/mpe-sparse-matrix/: main.cpp  mpe-sparse-matrix.vcxproj
mpi-openmp-sparse-matrix/mpi-openmp-sparse-matrix/: main.cpp  mpi-openmp-sparse-matrix.vcxproj
mpi-openmp-sparse-matrix/single-sparse-matrix/: main.cpp  single-sparse-matrix.vcxproj
mpi-openmp-sparse-matrix/x64/Debug/: mpi-openmp-sparse-matrix.ilk  single-sparse-matrix.ilk
mpi-openmp-sparse-matrix/x64/Release/: mat10.txt  (+6 more)
opencl-char-pol/: BasicDebugVS13.vcxproj  CMakeLists.txt  CMakeLists.txt~  kernel.cl  main.cpp  matrix.txt  opencl-par-pol.sln  src.unzipit
opencl-char-pol/src/: BasicDebugVS13.vcxproj  matrix_10_100x100f.txt  matrix_10_200x200f.txt
openmp-determinant/: CMakeLists.txt  main.cpp  matrix10x10  openmp_test
parallel-palindrome/: parallel-palindrome.sln
parallel-palindrome/generate-data/: generate-data.vcxproj  main.cpp
parallel-palindrome/parallel-palindrome/: main.cpp  parallel-palindrome.vcxproj
parallel-palindrome/test-data/: main.cpp  test-data.vcxproj
(+55 files in other folders)
